Fixed z-index regression.

--- a/bootstrap-datepicker.css
+++ b/bootstrap-datepicker.css
@@ -3,18 +3,12 @@ div.datepicker {
   position: relative;
 }
 
-div.datepicker > input {
-  position: relative;
-  z-index: 1;
-}
-
 div.datepicker > label.add-on {
   position: absolute;
   top: 0;
   right: 0;
   color: #333;
   cursor: pointer;
-  z-index: 2;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -25,6 +19,7 @@ div.datepicker > label.add-on {
 div.datepicker > input:focus + label.add-on {
   background-color: #ccc;
   border: 1px solid #777;
+  z-index: 2;
   -webkit-box-shadow: inset 0 1px 4px 0 rgba(0, 0, 0, 0.8);
   -moz-box-shadow: inset 0 1px 4px 0 rgba(0, 0, 0, 0.8);
   box-shadow: inset 0 1px 4px 0 rgba(0, 0, 0, 0.8);
